--- a/MapSearch/Base.lproj/Main.storyboard
+++ b/MapSearch/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,13 +13,35 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MapSearch" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="OfV-92-DoQ">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </mapView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="DR6-Tg-YLm">
+                                <rect key="frame" x="0.0" y="30" width="375" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="OfV-92-DoQ" secondAttribute="bottom" id="4bZ-dV-ODa"/>
+                            <constraint firstAttribute="trailing" secondItem="OfV-92-DoQ" secondAttribute="trailing" id="7hz-QU-aUc"/>
+                            <constraint firstItem="OfV-92-DoQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="FGH-b6-mX2"/>
+                            <constraint firstItem="DR6-Tg-YLm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dtA-Tf-HLr"/>
+                            <constraint firstItem="DR6-Tg-YLm" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="mth-ut-cpO"/>
+                            <constraint firstItem="DR6-Tg-YLm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="nDI-We-qRQ"/>
+                            <constraint firstItem="OfV-92-DoQ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="tzB-V0-Pr9"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="OfV-92-DoQ" id="lwW-cz-VCa"/>
+                        <outlet property="searchBar" destination="DR6-Tg-YLm" id="YXA-yK-6yA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
